--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-positive">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -8,13 +8,14 @@
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
       </ion-nav-buttons>
+
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
-  </ion-side-menu-content>
+  </ion-side-menu-content >
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+    <ion-header-bar class="bar-positive">
+      <h1 class="title">Menü</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
@@ -24,7 +25,7 @@
         <ion-item nav-clear menu-close href="#/app/takePicture">
           Take Image
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
+        <ion-item nav-clear menu-close href="#/app/Discogs">
           Server Logs
         </ion-item>
       </ion-list>
