--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,11 @@
 		<div class="card" ng-repeat="brick in masonrybricks">
 
 			<img ng-src="{{ brick.text }}">
-			
+			<div class="row"> 
+				<div class="col col-33 col-offset-33"> 
+				<h4> {{brick.name}} </h4>
+				</div>
+			</div> 
 		</div>
 	</div>
 	
