--- a/templates/menu.html
+++ b/templates/menu.html
@@ -25,7 +25,7 @@
         <ion-item nav-clear menu-close href="#/app/takePicture">
           Take Image
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/Discogs">
+        <ion-item nav-clear menu-close href="#/app/serverLogs">
           Server Logs
         </ion-item>
       </ion-list>
